--- a/templates/register.html
+++ b/templates/register.html
@@ -12,7 +12,8 @@
             <input type="text" id="username" name="username"><br><br>
             <label for="password">Password:</label>
             <input type="password" id="password" name="password"><br><br>
-            <input type="submit" value="Submit">
+            <input type="submit" value="Register">
         </form>
+        <p>Already have an account? <a href="{{ url_for('login') }}">Login here</a></p>
     </body>
 </html>
