--- a/templates/index.html
+++ b/templates/index.html
@@ -41,6 +41,8 @@
 
 <body>
     <h1>UniMarket</h1>
+    <p>Welcome to UniMarket {{ username }}! This is a place where you can buy and sell items with other students.</p>
+    
     <p>
         <a href="{{ url_for('login') }}">Login</a> or <a href="{{ url_for('register') }}">Register</a>
     </p>
