protects against unauthenticated user post and display usernames and escape html

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,7 @@
             fetchPosts();                       // Fetch all posts on page load
 
             // Handle post creation
+            //setInterval(fetchPosts, 5000)
             $('#createPostForm').submit(function (e) {
                 e.preventDefault();
                 $.post("/post", $(this).serialize(), function (data) {
