--- a/templates/index.html
+++ b/templates/index.html
@@ -6,41 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script>
-        $(document).ready(function () {
-            fetchPosts();                       // Fetch all posts on page load
-
-            // Handle post creation
-            //setInterval(fetchPosts, 5000)
-            $('#createPostForm').submit(function (e) {
-                e.preventDefault();
-                $.post("/post", $(this).serialize(), function (data) {
-                    if (data.success) {
-                        alert('Post created successfully!');
-                        fetchPosts();
-                    } else {
-                        alert(data.error);
-                    }
-                });
-            });
-        });
-
-        function fetchPosts() {                     
-            $.get("/posts", function (data) {
-                let postsHtml = '';
-                data.forEach(post => {
-                    postsHtml += `<h2>${post.title}</h2>`;
-                    postsHtml += `<p>By: ${post.username}</p>`;
-                    postsHtml += `<p>${post.description}</p>`;
-                    postsHtml += '<hr>';
-                });
-                $('#postsContainer').html(postsHtml);
-            });
-        }
-    </script>
+    
 </head>
 
-<body>
+<body onload="task()">
     <h1>UniMarket</h1>
     <p>Welcome to UniMarket {{ username }}! This is a place where you can buy and sell items with other students.</p>
     
@@ -50,6 +19,9 @@
 
     <h2>Create a Post</h2>
     <form id="createPostForm">
+        <label for="usernamePost">Username:</label>
+        <input type="text" id="usernamePost" name="username" required><br><br>
+
         <label for="titlePost">Title:</label>
         <input type="text" id="titlePost" name="title" required><br><br>
 
@@ -63,6 +35,8 @@
     <div id="postsContainer">
         <!-- all the post should show up here for now  ||  we need to add css design to it -->
     </div>
+    <script src="{{ url_for('static', filename='functions.js') }}"></script>
+
 </body>
 
 </html>
