--- a/templates/index.html
+++ b/templates/index.html
@@ -5,14 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='auction.css') }}">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     
 </head>
 
 <body onload="task()">
     <h1>UniMarket</h1>
+    <a href="/auction" class="auction-button">Go to Auction</a>
     <p>Welcome to UniMarket {{ username }}! This is a place where you can buy and sell items with other students.</p>
-    
     <p>
         <a href="{{ url_for('login') }}">Login</a> or <a href="{{ url_for('register') }}">Register</a>
     </p>
