--- a/static/auction.css
+++ b/static/auction.css
@@ -4,10 +4,10 @@
     justify-content: space-between;
     align-items: center;
     padding: 10px;
-    /* add more styles as needed */
+
 }
 
-/* CSS for the auction button */
+
 .auction-button {
     padding: 10px 20px;
     background-color: #007bff;
@@ -17,9 +17,86 @@
     border-radius: 5px;
     font-weight: bold;
     cursor: pointer;
-    /* add more styles as needed */
 }
 
 .auction-button:hover {
     background-color: #0056b3;
+}
+
+
+body {
+    font-family: 'Arial', sans-serif;
+}
+
+#auction-details {
+    margin-bottom: 20px;
+}
+
+#bid-form {
+    margin-bottom: 20px;
+}
+
+#bid-input {
+    margin-right: 10px;
+}
+
+.auction-item {
+    border: 1px solid #ccc;
+    margin-bottom: 15px;
+    padding: 10px;
+}
+
+.auction-item h2 {
+    color: #333;
+}
+
+.auction-item img {
+    width: 100%;
+    height: auto;
+}
+
+
+#upload-auction-item-btn {
+    display: block;
+    margin: 10px 0;
+    padding: 8px 16px;
+    background-color: #007bff;
+    color: #ffffff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+#upload-auction-item-btn:hover {
+    background-color: #0056b3;
+}
+
+.modal {
+    display: none;
+    /* Hidden by default */
+    position: fixed;
+    /* Stay in place */
+    z-index: 1;
+    /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%;
+    /* Full width */
+    height: 100%;
+    /* Full height */
+    overflow: auto;
+    /* Enable scroll if needed */
+    background-color: rgb(0, 0, 0);
+    /* Fallback color */
+    background-color: rgba(0, 0, 0, 0.4);
+    /* Black w/ opacity */
+}
+
+.modal-dialog {
+    background-color: #fefefe;
+    margin: 15% auto;
+    /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
 }
