--- a/templates/auction.html
+++ b/templates/auction.html
@@ -21,7 +21,7 @@
             <!-- Modal Header -->
             <div class="modal-header">
                 <h4 class="modal-title">Upload Auction Item</h4>
-                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <a href="/post" class="auction-button">Go to Auction</a>
             </div>
 
             <!-- Modal body -->
@@ -30,6 +30,10 @@
                 <div class="form-group">
                     <label for="item-title">Item Title:</label>
                     <input type="text" class="form-control" id="item-title" name="title" required>
+                </div>
+                <div class="form-group">
+                    <label for="item-username">Username</label>
+                    <input type="text" class="form-control" id="item-username" name="username" required>
                 </div>
                 <div class="form-group">
                     <label for="item-description">Description:</label>
