upload action item is done but need to display it

--- a/templates/auction.html
+++ b/templates/auction.html
@@ -11,9 +11,7 @@
     </head>
     <body>
         <h1>Auction House</h1>
-        <button type="button" id="upload-auction-item-btn" data-toggle="modal" data-target="#auctionItemModal">
-            Upload Auction Item
-        </button>
+        <a href="/upload_auction" class="btn btn-primary" id="upload-auction-item-btn">Upload Auction Item</a>
         <div class="modal" id="auctionItemModal">
         <div class="modal-dialog">
             <div class="modal-content">
