--- a/templates/upload_auction.html
+++ b/templates/upload_auction.html
@@ -47,7 +47,7 @@
             <div class="form-group">
                 <label for="duration" class="form-label">Auction Duration:</label>
                 <input type="text" id="duration" name="duration" class="form-input"
-                    placeholder="Enter duration (e.g., 7 days)" required>
+                    placeholder="Enter duration" required>
             </div>
 
             <div class="form-group">
