--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,8 @@
     <title>Home Page</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='auction.css') }}">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.0/socket.io.min.js"></script>
+
     
 </head>
 
