--- a/templates/auction.html
+++ b/templates/auction.html
@@ -75,9 +75,9 @@
             </div>
             {% endfor %}
         </div>
-        <div id="auction-details">
+        <!-- <div id="auction-details">
             <p>Current Bid: $<span id="current-bid">0</span></p>
-        </div>
+        </div> -->
         <div id="messages"></div>
     </body>
 </html>
