--- a/templates/index.html
+++ b/templates/index.html
@@ -15,6 +15,7 @@
 <body onload="task()">
     <h1>UniMarket</h1>
     <a href="/auction" class="auction-button">Go to Auction</a>
+    <a href="/bid_creator" class="auction-button">My Created Auctions</a>
     <p>Welcome to UniMarket {{ username }}! This is a place where you can buy and sell items with other students.</p>
     <p>
         <a href="{{ url_for('login') }}">Login</a> or <a href="{{ url_for('register') }}">Register</a>
