--- a/static/auction.css
+++ b/static/auction.css
@@ -106,3 +106,26 @@ body {
     max-width: 500px;
     height: auto;
 }
+
+
+.h1 {
+    text-align: center;
+    margin-top: 50px;
+}
+
+
+.description {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 18px;
+    margin-bottom: 50px;
+}
+
+.description img {
+    display: block;
+    margin-right: 20px;
+    max-width: 200px;
+    height: auto;
+    margin-bottom: 20px;
+}
