--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,12 @@
     <a href="/auction" class="auction-button">Go to Auction</a>
     <a href="/bid_creator" class="auction-button">My Created Auctions</a>
     <a href="/profile" class="auction-button">Go to Profile</a>
-    <p>Welcome to UniMarket {{ username }}! This is a place where you can buy and sell items with other students.</p>
+    <div className="description">
+        <p>Welcome to UniMarket {{ username }}! This is a place where you can buy and sell items with other students.</p>
+        <img src="{{ url_for('static', filename='home.jpeg') }}">
+    </div>
+    
+    
     <p>
         <a href="{{ url_for('login') }}">Login</a> or <a href="{{ url_for('register') }}">Register</a>
     </p>
@@ -43,7 +48,6 @@
         <!-- Auction winners will be dynamically loaded here using WebSockets -->
     </div>
     
-    <script src="https://cdn.socket.io/socket.io-3.1.3.min.js"></script>
     <script type="text/javascript">
         var socket = io.connect('http://' + document.domain + ':' + location.port);
 
