--- a/templates/auction.html
+++ b/templates/auction.html
@@ -61,7 +61,7 @@
             </div>
         </div>
         </div>
-        <div id="auction-items">
+        <!-- <div id="auction-items">
             {% for item in auction_items %}
             <div class="auction-item">
                 <h3>{{ item.title }}</h3>
@@ -74,7 +74,7 @@
                 <p>Time Remaining: <span id="time-remaining-{{ item._id }}">calculating...</span></p>
             </div>
             {% endfor %}
-        </div>
+        </div> -->
         <!-- <div id="auction-details">
             <p>Current Bid: $<span id="current-bid">0</span></p>
         </div> -->
