change local host changes

--- a/templates/index.html
+++ b/templates/index.html
@@ -54,7 +54,7 @@
     </div>
     
     <script type="text/javascript">
-        var socket = io.connect('http://localhost:8080');
+        var socket = io.connect('https://appboard.live');
 
         socket.on('connect', function () {
             console.log('Websocket connected!');
