--- a/templates/register.html
+++ b/templates/register.html
@@ -8,6 +8,8 @@
     <body>
         <h1>Registration Form</h1>
         <form action="/register" method="POST">
+            <label for="email">Email:</label>
+            <input type="text" id="email" name="email"><br><br>
             <label for="username">Username:</label>
             <input type="text" id="username" name="username"><br><br>
             <label for="password">Password:</label>
