uncommented wokring part. IDK why someone commented out the working cpde

--- a/templates/auction.html
+++ b/templates/auction.html
@@ -61,7 +61,7 @@
             </div>
         </div>
         </div>
-        <!-- <div id="auction-items">
+        <div id="auction-items">
             {% for item in auction_items %}
             <div class="auction-item">
                 <h3>{{ item.title }}</h3>
@@ -75,9 +75,9 @@
             </div>
             {% endfor %}
         </div> -->
-        <!-- <div id="auction-details">
+        <div id="auction-details">
             <p>Current Bid: $<span id="current-bid">0</span></p>
-        </div> -->
+        </div>
         <div id="messages"></div>
     </body>
 </html>
